--- a/UsingCustomSpecFlow/UsingCustomSpecFlow.csproj
+++ b/UsingCustomSpecFlow/UsingCustomSpecFlow.csproj
@@ -78,10 +78,11 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="lib\Exten.Generator.SpecFlowPlugin.dll" />
-  </ItemGroup>
-  <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="lib\Exten.Generator.SpecFlowPlugin.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
